--- a/frontend/frontend/package.json
+++ b/frontend/frontend/package.json
@@ -11,10 +11,13 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.18",
+    "@types/leaflet": "^1.9.21",
     "axios": "^1.13.2",
     "face-api.js": "^0.22.2",
+    "leaflet": "^1.9.4",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-leaflet": "^5.0.0",
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.11.0",
     "recharts": "^3.6.0",
