--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
     "mongodb": "^7.0.0",
     "mongoose": "^9.1.1",
     "multer": "^2.0.2",
+    "pdfkit": "^0.17.2",
     "redis": "^5.10.0"
   }
 }
