--- a/frontend/frontend/package.json
+++ b/frontend/frontend/package.json
@@ -11,9 +11,12 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.18",
+    "@types/jspdf": "^1.3.3",
     "@types/leaflet": "^1.9.21",
     "axios": "^1.13.2",
     "face-api.js": "^0.22.2",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^4.0.0",
     "leaflet": "^1.9.4",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
